--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>dashboard</title>
 </head>
 <body>
     <h1>hello KPRCAS</h1>
+    <h2>hello kprcas</h2>
+    <h3>hello kprcas</h3>
+    <h4>hello kprcas</h4>
+    <h5>hello kprcas</h5>
+    <h6>hello kprcas</h6>
 </body>
 </html>
