--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dashboard</title>
 </head>
+
 <body>
     <h1>hello KPRCAS</h1>
     <h2>hello kprcas</h2>
@@ -12,5 +14,13 @@
     <h4>hello kprcas</h4>
     <h5>hello kprcas</h5>
     <h6>hello kprcas</h6>
+    <p>Lorem <b>ipsum</b> ipsum dolor sit amet <strong> consectetur</strong> adipisicing elit. <q>Voluptate </q>itaque,
+        <i>incidunt</i> amet nisi ea <u>reprehenderit</u> maiores voluptates atque corrupti, a quo, error nostrum libero
+        ipsa. Mollitia alias non neque quo laudantium, quas eaque aliquam recusandae ex magni distinctio esse molestias
+        placeat velit sit atque praesentium id dolorum. Totam, quisquam? Tenetur? ipsum dolor, sit amet consectetur
+        adipisicing elit. Quisquam earum nam animi veniam odit illum reiciendis vel sit dolorem delectus doloremque
+        ducimus aperiam dolorum asperiores, voluptas tenetur alias? Accusantium, impedit.</p>
+    <a href="https://www.instagram.com/" target="_blank"></a>instagram</a>
 </body>
+
 </html>
