--- a/about.html
+++ b/about.html
@@ -4,35 +4,82 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About</title>
+    <style>
+        .paragraph {
+            background-color: bisque;
+        }
+
+        #car {
+            color: cadetblue;
+        }
+
+        #bike {
+            color: darkslateblue;
+        }
+
+        #cycle {
+            color: rgb(12, 12, 238);
+        }
+
+        #car,
+        #bike,
+        #cycle {
+            background-color: palevioletred;
+        }
+        .lorem{
+            font-family: 'Times New Roman', Times, serif;
+            font-weight: 500;
+            font-size: larger;
+            font-style: italic;
+            letter-spacing: 8px;
+            line-height: 40px;
+            text-transform: uppercase;
+            text-align: end;
+             }
+             h1{
+                padding: 10px;
+                border: 10px double rgba(161, 11, 91, 0.925);
+                margin: 10px 20px;
+                background-color: rgb(95, 147, 243);
+             }
+            </style>
 </head>
 
 <body>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima labore alias eius quisquam unde? Illo aliquam
+    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima labore alias eius quisquam
+        unde? Illo aliquam
         assumenda aspernatur vitae, quibusdam temporibus laudantium quos provident asperiores amet possimus ullam
         quisquam fuga. ipsum dolor sit, amet consectetur adipisicing elit. Atque harum dicta provident voluptatum,
         maiores molestias nesciunt asperiores quis repellendus consectetur dolor soluta praesentium expedita. At, ab
         suscipit! Sit, nesciunt incidunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut corporis
-        praesentium id vitae tempora atque odit corrupti quam possimus odio consequatur, <br> impedit deserunt modi sequi
+        praesentium id vitae tempora atque odit corrupti quam possimus odio consequatur, <br> impedit deserunt modi
+        sequi
         molestiae. Aut nostrum repellendus nobis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rerum autem
         sint doloribus, sunt perferendis optio quae in temporibus exercitationem vel officia inventore reiciendis
-        incidunt minima esse sequi repellat consequuntur? Velit. <hr> Lorem ipsum dolor sit amet consectetur adipisicing
+        incidunt minima esse sequi repellat consequuntur? Velit.
+        <hr> Lorem ipsum dolor sit amet consectetur adipisicing
         elit. Atque repudiandae adipisci nisi, beatae amet delectus fugiat sed possimus itaque labore optio facilis quis
         laudantium dolor modi qui quasi voluptas laborum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo,
         perspiciatis magni ipsam, aut velit nobis vel laborum aperiam iste modi, dolor placeat aliquam quidem at? Fugit
-        libero inventore repellat amet.</p>
+        libero inventore repellat amet.
+    <p class="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non amet, labore similique rem numquam nobis! Officia
+        exercitationem tempora in ipsum! Voluptate in fugiat accusantium fugit neque consequuntur quae consectetur
+        suscipit?</p>
+    </p>
     <a href="./about.html">about</a>
-    <img src="./assets/image.png" alt="rose" width="300px" height="300px">
+    <img src="./assets/image.png" alt="rose" width="300px" height="350px">
     <ul>
-        <li>car</li>
-        <li>bike</li>
-        <li>cycle</li>
+        <li id="car">car</li>
+        <li id="bike">bike</li>
+        <li id="cycle">cycle</li>
     </ul>
     <ol>
         <li>car</li>
         <li>bike</li>
         <li>cycle</li>
     </ol>
+    <h1 class="box model">Box Model</h1>
 </body>
 
 </html>
