--- a/index.html
+++ b/index.html
@@ -5,10 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dashboard</title>
+    <style>
+        h2 {
+            color: rgb(212, 0, 255);
+        }
+
+        * {
+            color: hotpink;
+        }
+
+        
+    </style>
+    <link rel="stylesheet" href="./CSS/style.css">
 </head>
 
 <body>
-    <h1>hello KPRCAS</h1>
+    <h1 style="color: red;">hello KPRCAS</h1>
     <h2>hello kprcas</h2>
     <h3>hello kprcas</h3>
     <h4>hello kprcas</h4>
@@ -19,7 +31,9 @@
         ipsa. Mollitia alias non neque quo laudantium, quas eaque aliquam recusandae ex magni distinctio esse molestias
         placeat velit sit atque praesentium id dolorum. Totam, quisquam? Tenetur? ipsum dolor, sit amet consectetur
         adipisicing elit. Quisquam earum nam animi veniam odit illum reiciendis vel sit dolorem delectus doloremque
-        ducimus aperiam dolorum asperiores, voluptas tenetur alias? Accusantium, impedit.</p>
+        ducimus aperiam dolorum asperiores, voluptas tenetur alias? Accusantium, impedit.
+    </p>
+
     <a href="https://www.instagram.com/" target="_blank"></a>instagram</a>
 </body>
 
