--- a/skils.html
+++ b/skils.html
@@ -3,28 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Skills</title>
+    <style>
+body{
+font-family: Arial, Helvetica, sans-serif;
+display: flex;
+justify-content: center;
+align-items: center;
+background:linear-gradient(rgb(230, 120, 120),rgb(118, 118, 226)); 
+height: 98vh;
+text-align: center;
+}
+button:hover{
+    background-color: midnightblue;
+}
+    </style>
 </head>
 <body>
-   <form action="">
-    <h1>Login</h1>
-    <label for="email">Email</label>
-    <input type="text" placeholder="Enter the email" required>
+   <form class="form">
+    <h1>STUDENT FORM</h1>
+    <label for="Name">Name :</label>
+    <input type="Name" placeholder="Enter the name" required>
     <br><br>
-    <label for="password">password</label>
-    <input type="password" placeholder="Enter the password" maxlength="8">
+    <label for="Register No.">Register No:</label>
+    <input type="Register No." placeholder="Enter the register number" maxlength="10">
     <br><br>
-    <label for="feedback">feedbback</label>
-    <textarea name="feedback" id="feedback" placeholder="Enter your feedback"></textarea>
+    <label for="Department">Department :</label>
+    <input type="Department" placeholder="Enter the department">
     <br><br>
-    <label for="Gender">gender</label>
+    <label for="Gender">gender :</label>
     <select name="gender" id="gender">
         <option value="">select</option> 
         <option value="male">Male</option>
         <option value="female">Female</option>
     </select>
     <br><br>
+    <label for="Date of Birth">DOB:</label>
+    <input type="DOB" placeholder="Enter the date of birth">
+    <br><br>
+    <label for="Religion">Religion :</label>
+    <input type="religion" placeholder="Enter the religion">
+    <br><br>
+    <label for="Email">Email :</label>
+    <input type="Email" placeholder="Enter the email">
+    <br><br>
+    <label for="Password">Password :</label>
+    <input type="password" placeholder="Enter the password">
+    <br><br>
+    <label for="Mobile No">Mobile No :</label>
+    <input type="tel" placeholder="Enter the mobile number">
+    <br><br>
+    <label for="Address">Address :</label>
+    <textarea name="Address" id="">Enter your Address</textarea>
+    <br><br>
+    <label for="Country">Country :</label>
+    <input type="text" placeholder="Enter the country">
+    <br><br>
     <button>Submit</button>
    </form> 
+<br>
 </body>
 </html>
