--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </p>
 
     <a href="https://www.instagram.com/" target="_blank"></a>instagram</a>
+    <a href="./skils.html">task</a>
 </body>
 
 </html>
